This is getting a lot closer to being releasable.  The compass is working a lot more reliably but it's still not quite right.  I have tracked rockets with this though so it getting better.

--- a/RocketTrackReceiver/data/config.html
+++ b/RocketTrackReceiver/data/config.html
@@ -65,6 +65,9 @@
 				<tr>
 					<td><form action="reset_calibration.html"><button type="submit" class="menubutton" formmethod="get">Reset<br>Calibration<br>Values</button></form></td>
 				</tr>
+				<tr>
+					<td><form action="tracking.html"><button type="submit" class="menubutton" formmethod="get">Return to <br>Tracking Mode</button></form></td>
+				</tr>
 			</table>
 		</div>
 	</body>
