--- a/RocketTrackReceiver/data/tracking.html
+++ b/RocketTrackReceiver/data/tracking.html
@@ -5,6 +5,7 @@
 		<meta http-equiv="refresh" content="1">
 	</head>
 	<body onload="DrawTrackingPlot()">
+		<h1>Tracking Mode</h1>
 <!--
 		<form action="getkml.html">
 			<button class="kmlbutton" type="submit" formmethod="get">Get KML Pin</button>
@@ -13,7 +14,9 @@
 		<canvas id="trackingplot" width="1000" height="1000">Your browser does not support the canvas element.</canvas>
 		<table>
 			<tr>
-				<td><form action="/altitude.html"><button class="menubuttons" type="submit" formmethod="get">Altitude<br>Plot</button></form></td>
+				<td><form action="tracking.html"><button class="menubuttons" type="submit" formmethod="get">Tracking<br>Mode</button></form></td>
+				<td><form action="telemetry.html"><button class="menubuttons" type="submit" formmethod="get">Telemetry<br>Mode</button></form></td>
+				<td><form action="altitude.html"><button class="menubuttons" type="submit" formmethod="get">Altitude<br>Plot</button></form></td>
 				<td><form action="/config.html"><button class="menubuttons" type="submit" formmethod="get">Configure<br>Settings</button></form></td>
 			</tr>
 			<tr>
