This version now allows inserting plaintext packets as if they've been received over the radio link.
The altitude graph stuff doesn't work as yet.

--- a/RocketTrackReceiver/data/altitude.html
+++ b/RocketTrackReceiver/data/altitude.html
@@ -1,9 +1,22 @@
 <html>
 	<head>
-		<link rel="stylesheet" href="tracking.css">
-		<script src="tracking.js"></script>
-		<meta http-equiv="refresh" content="5">
+		<link rel="shortcut icon" href="http://localhost/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="http://localhost/favicon.ico" type="image/x-icon">
+		<link rel="stylesheet" href="http://localhost/altitude.css">
+		<script type="module" src="http://localhost/altitude.js"></script>
+		<!--
+			<meta http-equiv="refresh" content="1">
+		-->
 	</head>
+	<!--
 	<body onload="DrawAltitudePlot()">
-	</body>
+	-->
+	<body>
+		<div style="width: 800px;">
+			<canvas id="altitude"></canvas>
+		</div>
+		<!--
+		<script type="module" src="altitude.js"></script>	
+		-->
+    </body>
 </html>
