Added some overall css stuff to make the UI more consistent across pages

--- a/RocketTrackReceiver/data/telemetry.html
+++ b/RocketTrackReceiver/data/telemetry.html
@@ -1,10 +1,11 @@
+<!doctype html>
 <html>
 	<header>
 		<link rel="stylesheet" href="telemetry.css">
 		<meta http-equiv="refresh" content="1">
 	</header>
 	<body>
-		<h1>Telemetry Mode</h1>
+		<h1>RocketTrackReceiver<br>Telemetry Mode</h1>
 		<table class="datasection">
 			<tr><td class="datatag">Beacon ID:</td><td class="datavalue">%BEACON_ID%</td></tr>
 			<tr><td class="datatag">Longitude:</td><td class="datavalue">%TX_LATITUDE%</td></tr>
