--- a/RocketTrackReceiver/data/tracking.html
+++ b/RocketTrackReceiver/data/tracking.html
@@ -5,8 +5,8 @@
 		<meta http-equiv="refresh" content="1">
 	</head>
 	<body onload="DrawTrackingPlot()">
-		<h1>RocketTrackReceiver<br>Tracking Mode</h1>
-		<canvas id="trackingplot">Your browser does not support the canvas element.</canvas>
+		<h1>RocketTrackReceiver</h1>
+		<canvas id="trackingplot" width="1000" height="1000">Your browser does not support the canvas element.</canvas>
 		<table class="buttonsection">
 			<tr>
 				<td><form action="tracking.html"><button class="menubuttons" type="submit" formmethod="get">Tracking<br>Mode</button></form></td>
