--- a/RocketTrackReceiver/data/tracking.html
+++ b/RocketTrackReceiver/data/tracking.html
@@ -1,25 +1,14 @@
 <html>
 	<head>
-		<link rel="stylesheet" href="tracking.css">
+		<script src="includehtml.js"></script>
 		<script src="tracking.js"></script>
+		<link rel="stylesheet" href="tracking.css">
 		<meta http-equiv="refresh" content="1">
 	</head>
 	<body onload="DrawTrackingPlot()">
 		<h1>RocketTrackReceiver</h1>
 		<canvas id="trackingplot" width="1000" height="1000">Your browser does not support the canvas element.</canvas>
-		<table class="buttonsection">
-			<tr>
-				<td><form action="tracking.html"><button class="menubuttons" type="submit" formmethod="get">Tracking<br>Mode</button></form></td>
-				<td><form action="telemetry.html"><button class="menubuttons" type="submit" formmethod="get">Telemetry<br>Mode</button></form></td>
-			</tr>
-			<tr>
-				<td><form action="altitude.html"><button class="menubuttons" type="submit" formmethod="get">Altitude<br>Plot</button></form></td>
-				<td><form action="config.html"><button class="menubuttons" type="submit" formmethod="get">Configure<br>Settings</button></form></td>
-			</tr>
-			<tr>
-				<td><form action="north_up.html"><button class="menubuttons" type="submit" formmethod="get">North<br>Upwards</button></form></td>
-				<td><form action="beacon_up.html"><button class="menubuttons" type="submit" formmethod="get">Beacon Bearing<br>Upwards</button></form></td>
-			</tr>
-		</table>
+		<div w3-include-html="buttons.html"></div>
+		<script>includeHTML();</script>
 	</body>
 </html>
