Changed Voltages on the tracking page to show for both beacon and receiver. This compiles but is untested.  Commented out the crypto_watchdog thing as it seems to not be needed any more.

--- a/RocketTrackReceiver/data/tracking.html
+++ b/RocketTrackReceiver/data/tracking.html
@@ -3,6 +3,8 @@
 		<script src="includehtml.js"></script>
 		<script src="tracking.js"></script>
 		<link rel="stylesheet" href="tracking.css">
+		<link rel="shortcut icon" href="http://localhost/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="http://localhost/favicon.ico" type="image/x-icon">
 		<meta http-equiv="refresh" content="1">
 	</head>
 	<body onload="DrawTrackingPlot()">
