--- a/RocketTrackReceiver/data/index.html
+++ b/RocketTrackReceiver/data/index.html
@@ -2,6 +2,8 @@
 	<head>
 		<script src="includehtml.js"></script>
 		<link rel="stylesheet" href="index.css">
+		<link rel="shortcut icon" href="http://localhost/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="http://localhost/favicon.ico" type="image/x-icon">
 	</head>
 	<body>
 		<h1>Rocket Track Receiver</h1>
