--- a/RocketTrackReceiver/data/telemetry.html
+++ b/RocketTrackReceiver/data/telemetry.html
@@ -3,6 +3,8 @@
 	<header>
 		<script src="includehtml.js"></script>
 		<link rel="stylesheet" href="telemetry.css">
+		<link rel="shortcut icon" href="http://localhost/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="http://localhost/favicon.ico" type="image/x-icon">
 		<meta http-equiv="refresh" content="1">
 	</header>
 	<body>
