--- a/RocketTrackReceiver/data/cal_magnetometer.html
+++ b/RocketTrackReceiver/data/cal_magnetometer.html
@@ -6,7 +6,7 @@
 		<center>
 			<h1>Compass Calibration</h1>
 			<h2>The process will start in 2 seconds</h2>
-			<h2>Rorate the receiver about all 3 axes</h2>
+			<h2>Rotate the receiver about all 3 axes</h2>
 			<h2>Calibration takes approximately 5 seconds to complete</h2>
 		</center>
 	</body>
