--- a/RocketTrackReceiver/data/tracking.html
+++ b/RocketTrackReceiver/data/tracking.html
@@ -13,12 +13,12 @@
 				<td><form action="telemetry.html"><button class="menubuttons" type="submit" formmethod="get">Telemetry<br>Mode</button></form></td>
 			</tr>
 			<tr>
-				<td><form action="altitude.html"><button class="menubuttons" type="submit" formmethod="get">Altitude<br>Plot</button></form></td>
-				<td><form action="config.html"><button class="menubuttons" type="submit" formmethod="get">Configure<br>Settings</button></form></td>
-			</tr>
-			<tr>
 				<td><form action="north_up.html"><button class="menubuttons" type="submit" formmethod="get">North<br>Upwards</button></form></td>
 				<td><form action="beacon_up.html"><button class="menubuttons" type="submit" formmethod="get">Beacon Bearing<br>Upwards</button></form></td>
+			</tr>
+			<tr>
+				<td><form action="altitude.html"><button class="menubuttons" type="submit" formmethod="get">Altitude<br>Plot</button></form></td>
+				<td><form action="index.html"><button class="menubuttons" type="submit" formmethod="get">Back</button></form></td>
 			</tr>
 		</table>
 	</body>
