--- a/RocketTrackReceiver/data/cal_accel_complete.html
+++ b/RocketTrackReceiver/data/cal_accel_complete.html
@@ -1,6 +1,6 @@
 <html>
 	<header>
-		<meta http-equiv="refresh" content="1; URL=calibrate.html" />
+		<meta http-equiv="refresh" content="2; URL=cal_accel.html" />
 	</header>
 	<body>
 		<center>
