--- a/RocketTrackReceiver/data/index.html
+++ b/RocketTrackReceiver/data/index.html
@@ -12,7 +12,7 @@
 			</tr>
 			<tr>
 				<td><form action="altitude.html"><button class="menubuttons" type="submit" formmethod="get">Altitude<br>Plot</button></form></td>
-				<td><form action="config.html"><button class="menubuttons" type="submit" formmethod="get">Configure<br>Settings</button></form></td>
+				<td><form action="calibrate.html"><button class="menubuttons" type="submit" formmethod="get">Calibrate<br>IMU</button></form></td>
 			</tr>
 			<tr>
 				<td><form action="status.html"><button class="menubuttons" type="submit" formmethod="get">Receiver<br>Status</button></form></td>
