--- a/RocketTrackReceiver/data/telemetry.html
+++ b/RocketTrackReceiver/data/telemetry.html
@@ -23,7 +23,7 @@
 			</tr>
 			<tr>
 				<td><form action="altitude.html"><button class="menubuttons" type="submit" formmethod="get">Altitude<br>Plot</button></form></td>
-				<td><form action="config.html"><button class="menubuttons" type="submit" formmethod="get">Configure<br>Settings</button></form></td>
+				<td><form action="index.html"><button class="menubuttons" type="submit" formmethod="get">Back</button></form></td>
 			</tr>
 		</table>
 	</body>
