Trying to get the compass working without using the library.  Seeing the same duff readings.  Not convinced this is a software issue.

--- a/RocketTrackReceiver/data/cal_accel_complete.html
+++ b/RocketTrackReceiver/data/cal_accel_complete.html
@@ -1,5 +1,6 @@
 <html>
 	<header>
+		<link rel="stylesheet" href="calibrate.css">
 		<meta http-equiv="refresh" content="2; URL=cal_accel.html" />
 	</header>
 	<body>
