--- a/RocketTrackReceiver/data/cal_gyro.html
+++ b/RocketTrackReceiver/data/cal_gyro.html
@@ -1,5 +1,6 @@
 <html>
 	<header>
+		<link rel="stylesheet" href="calibrate.css">
 		<meta http-equiv="refresh" content="5; URL=cal_complete.html" />
 	</header>
 	<body>
