--- a/RocketTrackReceiver/data/store_calibration.html
+++ b/RocketTrackReceiver/data/store_calibration.html
@@ -1,10 +1,11 @@
 <html>
 	<header>
-		<meta http-equiv="refresh" content="2; URL=config.html" />
+		<link rel="stylesheet" href="calibrate.css">
+		<meta http-equiv="refresh" content="2; URL=calibrate.html" />
 	</header>
 	<body>
 		<center>
-			<h1>Calibration Stored</h1>
+			<h1>Calibration Stored<br>to Non-Volatile<br>Memory</h1>
 		</center>
 	</body>
 </html>
