--- a/RocketTrackReceiver/data/cal_complete.html
+++ b/RocketTrackReceiver/data/cal_complete.html
@@ -1,5 +1,6 @@
 <html>
 	<header>
+		<link rel="stylesheet" href="calibrate.css">
 		<meta http-equiv="refresh" content="1; URL=calibrate.html" />
 	</header>
 	<body>
