--- a/RocketTrackReceiver/data/tracking.html
+++ b/RocketTrackReceiver/data/tracking.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="tracking.css">
-		<script src="tracking.js"></script>
+		<script src="rockettrackreceiver.js"></script>
 		<meta http-equiv="refresh" content="1">
 	</head>
 	<body onload="DrawTrackingPlot()">
