Added a Configure button to the home web page.

--- a/RocketTrackReceiver/data/index.html
+++ b/RocketTrackReceiver/data/index.html
@@ -16,6 +16,9 @@
 			</tr>
 			<tr>
 				<td><form action="status.html"><button class="menubuttons" type="submit" formmethod="get">Receiver<br>Status</button></form></td>
+				<td><form action="configure.html"><button class="menubuttons" type="submit" formmethod="get">Configure<br>Receiver</button></form></td>
+			</tr>
+			<tr>
 				<td><form action="engineering.html"><button class="menubuttons" type="submit" formmethod="get">Engineering<br>Mode</button></form></td>
 			</tr>
 		</table>
