--- a/RocketTrackReceiver/data/engineering.html
+++ b/RocketTrackReceiver/data/engineering.html
@@ -1,13 +1,16 @@
 <html>
 	<head>
+	        <link rel="stylesheet" href="engineering.css">
 	</head>
 	<body>
 		<center>
 			<h1>Engineering Page</h1>
-			<form action="pton.html"><button type="submit" formmethod="post">Permanent Transmit ON</button></form>
-			<form action="ptoff.html"><button type="submit" formmethod="post">Permanent Transmit off</button></form>
-			<form action="longrange.html"><button type="submit" formmethod="post">Long Range Mode</button></form>
-			<form action="highrate.html"><button type="submit" formmethod="post">High Rate Mode</button></form>
+			<!-- not for a receiver ...
+			<form action="pton.html"><button class="menubuttons" type="submit" formmethod="post">Permanent Transmit ON</button></form>
+			<form action="ptoff.html"><button class="menubuttons" type="submit" formmethod="post">Permanent Transmit off</button></form>
+			-->
+			<form action="longrange.html"><button class="menubuttons" type="submit" formmethod="post">Long Range Mode</button></form>
+			<form action="highrate.html"><button class="menubuttons" type="submit" formmethod="post">High Rate Mode</button></form>
 		</center>
 	</body>
 </html>
