This version will present the user with a dialog which allows entry of the magnetic correction data, and store/retrieve this from the non-volatile memory.

--- a/RocketTrackReceiver/data/configure.html
+++ b/RocketTrackReceiver/data/configure.html
@@ -5,9 +5,9 @@
     <body>
         <center>
             <h1>Configuration Page</h1>
-            <form action="channels.html"><button  class="menubuttons" type="submit" formmethod="post">RF Channel</button></form>
-            <form action="lora_settings.html"><button  class="menubuttons" type="submit" formmethod="post">LoRa Settings</button></form>
-            <form action="mag_calibration.html"><button  class="menubuttons" type="submit" formmethod="post">Magnetometer<br>Correction</button></form>
+            <form action="channels.html"><button  class="menubuttons" type="submit" formmethod="get">RF Channel</button></form>
+            <form action="lora_settings.html"><button  class="menubuttons" type="submit" formmethod="get">LoRa Settings</button></form>
+            <form action="mag_calibration.html"><button  class="menubuttons" type="submit" formmethod="get">Magnetometer<br>Correction</button></form>
         </center>
     </body>
 </html>
