This now reads nearly all its parameters from non-volatile store.  It also supports setting the receive channel from the web user interface to one of 6 channels.  A lot of the stuff to be able to adjust the lora parameters from the web user interface is done but not tested as yet.

--- a/RocketTrackReceiver/data/lora_settings.html
+++ b/RocketTrackReceiver/data/lora_settings.html
@@ -10,52 +10,53 @@
                     <h2>High Rate Mode</h2>
                     <fieldset>
                         <legend>Bandwidth</legend>
-                        <input type="radio" id="10.4K" name="hrbw" value="10.4K">
+                        <input type="radio" id="10.4K" name="hrbw" value="10.4K" %HR10.4K%>
                         <label class="bwlabel" for "10.4K">10.4K</label>
-                        <input type="radio" id="15.6K" name="hrbw" value="15.6K">
+                        <input type="radio" id="15.6K" name="hrbw" value="15.6K" %HR15.6K%>
                         <label class="bwlabel" for "15.6K">15.6K</label>
-                        <input type="radio" id="20.8K" name="hrbw" value="20.8K">
+                        <input type="radio" id="20.8K" name="hrbw" value="20.8K" %HR20.8K%>
                         <label class="bwlabel" for "20.8K">20.8K</label>
-                        <input type="radio" id="31.25K" name="hrbw" value="31.25K">
+                        <input type="radio" id="31.25K" name="hrbw" value="31.25K" %HR31.25K%>
                         <label class="bwlabel" for "31.25K">31.25K</label>
                         <br>
-                        <input type="radio" id="41.7K" name="hrbw" value="41.7K">
+                        <input type="radio" id="41.7K" name="hrbw" value="41.7K" %HR41.7K%>
                         <label class="bwlabel" for "41.7K">41.7K</label>
-                        <input type="radio" id="62.5K" name="hrbw" value="62.5K">
+                        <input type="radio" id="62.5K" name="hrbw" value="62.5K" %HR62.5K%>
                         <label class="bwlabel" for "62.5K">62.5K</label>
-                        <input type="radio" id="125K" name="hrbw" value="125K">
+                        <input type="radio" id="125K" name="hrbw" value="125K" %HR125K%>
                         <label class="bwlabel" for "125K">125K</label>
-                        <input type="radio" id="250K" name="hrbw" value="250K">
+                        <input type="radio" id="250K" name="hrbw" value="250K" %HR250K%>
                         <label class="bwlabel" for "250K">250K</label>
                     </fieldset>
                     <fieldset>
                         <legend>Spreading Factor</legend>
-                        <input type="radio" id="hrsf6" name="hrsf" value="SF6">
+                        <input type="radio" id="hrsf6" name="hrsf" value="SF6" %HRSF6%>
                         <label class="sflabel" for "hrsf6">SF=6</label>
-                        <input type="radio" id="hrsf7" name="hrsf" value="SF7">
+                        <input type="radio" id="hrsf7" name="hrsf" value="SF7" %HRSF7%>
                         <label class="sflabel" for "hrsf7">SF=7</label>
-                        <input type="radio" id="hrsf8" name="hrsf" value="SF8">
+                        <input type="radio" id="hrsf8" name="hrsf" value="SF8" %HRSF8%>
                         <label class="sflabel" for "hrsf8">SF=8</label>
-                        <input type="radio" id="hrsf9" name="hrsf" value="SF9">
+                        <input type="radio" id="hrsf9" name="hrsf" value="SF9" %HRSF9%>
                         <label class="sflabel" for "hrsf9">SF=9</label>
-                        <input type="radio" id="hrsf10" name="hrsf" value="SF10">
+                        <br>
+                        <input type="radio" id="hrsf10" name="hrsf" value="SF10" %HRSF10%>
                         <label class="sflabel" for "hrsf10">SF=10</label>
-                        <input type="radio" id="hrsf11" name="hrsf" value="SF11">
+                        <input type="radio" id="hrsf11" name="hrsf" value="SF11" %HRSF11%>
                         <label class="sflabel" for "hrsf11">SF=11</label>
-                        <input type="radio" id="hrsf12" name="hrsf" value="SF12">
+                        <input type="radio" id="hrsf12" name="hrsf" value="SF12" %HRSF12%>
                         <label class="sflabel" for "hrsf12">SF=12</label>
                     </fieldset>
                     <fieldset>
                         <legend>Coding Rate</legend>
-                        <input type="radio" id="hrcr4" name="hrcr" value="CR4">
+                        <input type="radio" id="hrcr4" name="hrcr" value="CR4" %HRCR4%>
                         <label class="crlabel" for "hrcr4">CR=4</label>
-                        <input type="radio" id="hrcr5" name="hrcr" value="CR5">
+                        <input type="radio" id="hrcr5" name="hrcr" value="CR5" %HRCR5%>
                         <label class="crlabel" for "hrcr5">CR=5</label>
-                        <input type="radio" id="hrcr6" name="hrcr" value="CR6">
+                        <input type="radio" id="hrcr6" name="hrcr" value="CR6" %HRCR6%>
                         <label class="crlabel" for "hrcr6">CR=4</label>
-                        <input type="radio" id="hrcr7" name="hrcr" value="CR7">
+                        <input type="radio" id="hrcr7" name="hrcr" value="CR7" %HRCR7%>
                         <label class="crlabel" for "hrcr7">CR=7</label>
-                        <input type="radio" id="hrcr8" name="hrcr" value="CR8">
+                        <input type="radio" id="hrcr8" name="hrcr" value="CR8" %HRCR8%>
                         <label class="crlabel" for "hrcr8">CR=8</label>
                     </fieldset>
                 </div>
@@ -63,56 +64,60 @@
                     <h2>Long Range Mode</h2>
                     <fieldset>
                         <legend>Bandwidth</legend>
-                        <input type="radio" id="10.4K" name="lrbw" value="10.4K">
+                        <input type="radio" id="10.4K" name="lrbw" value="10.4K" %LR10.4K%>
                         <label class="bwlabel" for "10.4K">10.4K</label>
-                        <input type="radio" id="15.6K" name="lrbw" value="15.6K">
+                        <input type="radio" id="15.6K" name="lrbw" value="15.6K" %LR15.6K%>
                         <label class="bwlabel" for "15.6K">15.6K</label>
-                        <input type="radio" id="20.8K" name="lrbw" value="20.8K">
+                        <input type="radio" id="20.8K" name="lrbw" value="20.8K" %LR20.8K%>
                         <label class="bwlabel" for "20.8K">20.8K</label>
-                        <input type="radio" id="31.25K" name="lrbw" value="31.25K">
+                        <input type="radio" id="31.25K" name="lrbw" value="31.25K" %LR31.25K%>
                         <label class="bwlabel" for "31.25K">31.25K</label>
                         <br>
-                        <input type="radio" id="41.7K" name="lrbw" value="41.7K">
+                        <input type="radio" id="41.7K" name="lrbw" value="41.7K" %LR41.7K%>
                         <label class="bwlabel" for "41.7K">41.7K</label>
-                        <input type="radio" id="62.5K" name="lrbw" value="62.5K">
+                        <input type="radio" id="62.5K" name="lrbw" value="62.5K" %LR62.5K%>
                         <label class="bwlabel" for "62.5K">62.5K</label>
-                        <input type="radio" id="125K" name="lrbw" value="125K">
+                        <input type="radio" id="125K" name="lrbw" value="125K" %LR125K%>
                         <label class="bwlabel" for "125K">125K</label>
-                        <input type="radio" id="250K" name="lrbw" value="250K">
+                        <input type="radio" id="250K" name="lrbw" value="250K" %LR250K%>
                         <label class="bwlabel" for "250K">250K</label>
                     </fieldset>
                     <fieldset>
                         <legend>Spreading Factor</legend>
-                        <input type="radio" id="lrsf6" name="lrsf" value="SF6">
+                        <input type="radio" id="lrsf6" name="lrsf" value="SF6" %LRSF6%>
                         <label class="sflabel" for "lrsf6">SF=6</label>
-                        <input type="radio" id="lrsf7" name="lrsf" value="SF7">
+                        <input type="radio" id="lrsf7" name="lrsf" value="SF7" %LRSF7%>
                         <label class="sflabel" for "lrsf7">SF=7</label>
-                        <input type="radio" id="lrsf8" name="lrsf" value="SF8">
+                        <input type="radio" id="lrsf8" name="lrsf" value="SF8" %LRSF8%>
                         <label class="sflabel" for "lrsf8">SF=8</label>
-                        <input type="radio" id="lrsf9" name="lrsf" value="SF9">
+                        <input type="radio" id="lrsf9" name="lrsf" value="SF9" %LRSF9%>
                         <label class="sflabel" for "lrsf9">SF=9</label>
-                        <input type="radio" id="lrsf10" name="lrsf" value="SF10">
+                        <br>
+                        <input type="radio" id="lrsf10" name="lrsf" value="SF10" %LRSF10%>
                         <label class="sflabel" for "lrsf10">SF=10</label>
-                        <input type="radio" id="lrsf11" name="lrsf" value="SF11">
+                        <input type="radio" id="lrsf11" name="lrsf" value="SF11" %LRSF11%>
                         <label class="sflabel" for "lrsf11">SF=11</label>
-                        <input type="radio" id="lrsf12" name="lrsf" value="SF12">
+                        <input type="radio" id="lrsf12" name="lrsf" value="SF12" %LRSF12%>
                         <label class="sflabel" for "lrsf12">SF=12</label>
                     </fieldset>
                     <fieldset>
                         <legend>Coding Rate</legend>
-                        <input type="radio" id="lrcr4" name="lrcr" value="CR4">
+                        <input type="radio" id="lrcr4" name="lrcr" value="CR4" %LRCR4%>
                         <label class="crlabel" for "lrcr4">CR=4</label>
-                        <input type="radio" id="lrcr5" name="lrcr" value="CR5">
+                        <input type="radio" id="lrcr5" name="lrcr" value="CR5" %LRCR5%>
                         <label class="crlabel" for "lrcr5">CR=5</label>
-                        <input type="radio" id="lrcr6" name="lrcr" value="CR6">
+                        <input type="radio" id="lrcr6" name="lrcr" value="CR6" %LRCR6%>
                         <label class="crlabel" for "lrcr6">CR=4</label>
-                        <input type="radio" id="lrcr7" name="lrcr" value="CR7">
+                        <input type="radio" id="lrcr7" name="lrcr" value="CR7" %LRCR7%>
                         <label class="crlabel" for "lrcr7">CR=7</label>
-                        <input type="radio" id="lrcr8" name="lrcr" value="CR8">
+                        <input type="radio" id="lrcr8" name="lrcr" value="CR8" %LRCR8%>
                         <label class="crlabel" for "lrcr8">CR=8</label>
                     </fieldset>
                 </div>
                 <button class="menubuttons" formmethod="post">Apply</button>
+            </form>
+            <form action="lora_defaults.html">
+                <td><button class="menubuttons">Restore Defaults</button></td>
             </form>
             <form action="configure.html">
                 <td><button class="menubuttons">Back</button></td>
