--- a/RocketTrackReceiver/data/channels.html
+++ b/RocketTrackReceiver/data/channels.html
@@ -7,18 +7,18 @@
             <h1>RF Channels Settings</h1>
             <form action="chan_save.html">
                 <div class="optionsgroup">
-                    <input type="radio" id="ch1" name="channel" value="ch1">
-                    <label class="freqlabel" for="ch1">434.050 MHz<br></label>
-                    <input type="radio" id="ch2" name="channel" value="ch2">
-                    <label class="freqlabel" for="ch1">434.150 MHz<br></label>
-                    <input type="radio" id="ch3" name="channel" value="ch3">
-                    <label class="freqlabel" for="ch1">434.250 MHz<br></label>
-                    <input type="radio" id="ch4" name="channel" value="ch4">
-                    <label class="freqlabel" for="ch1">434.350 MHz<br></label>
-                    <input type="radio" id="ch5" name="channel" value="ch5">
-                    <label class="freqlabel" for="ch1">434.450 MHz<br></label>
-                    <input type="radio" id="ch6" name="channel" value="ch6">
-                    <label class="freqlabel" for="ch1">434.550 MHz<br></label>
+                    <input type="radio" id="ch1" name="channel" value="ch1" %CH1_CHECKED%>
+                    <label class="freqlabel" for="ch1">%CH1_FREQ% MHz<br></label>
+                    <input type="radio" id="ch2" name="channel" value="ch2" %CH2_CHECKED%>
+                    <label class="freqlabel" for="ch1">%CH2_FREQ% MHz<br></label>
+                    <input type="radio" id="ch3" name="channel" value="ch3" %CH3_CHECKED%>
+                    <label class="freqlabel" for="ch1">%CH3_FREQ% MHz<br></label>
+                    <input type="radio" id="ch4" name="channel" value="ch4" %CH4_CHECKED%>
+                    <label class="freqlabel" for="ch1">%CH4_FREQ% MHz<br></label>
+                    <input type="radio" id="ch5" name="channel" value="ch5" %CH5_CHECKED%>
+                    <label class="freqlabel" for="ch1">%CH5_FREQ% MHz<br></label>
+                    <input type="radio" id="ch6" name="channel" value="ch6" %CH6_CHECKED%>
+                    <label class="freqlabel" for="ch1">%CH6_FREQ% MHz<br></label>
                 </div>
                 <button class="menubuttons" formmethod="post">Apply</button>
             </form>
